--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
       gap: 20px;
       padding: 10px;
       background-color: white;
@@ -54,18 +53,27 @@
       border-radius: 8px;
     }
 
+    h3, p {
+      text-align: center;
+    }
+
+    .container-text {
+      display: flex;
+      gap:10px;
+      flex-direction: column;
+      padding: 0 20px;
+    }
+    
+
   </style>
 </head>
 <body>
 
   <div class="container">
     <img src="/qr-code-component-main/images/image-qr-code.png" alt="Qr coder for payment"/>
-    <p>Improve your fronend skill by building projects</p>
-    <p>Scan the qr code to visit Frontend Mentror and take your codeing skills to the next level</p>
-    
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+    <div class="container-text">
+      <h3>Improve your fronend skill by building projects</h3>
+      <p>Scan the qr code to visit Frontend Mentror and take your codeing skills to the next level</p>
     </div>
   </div>
 </body>
