--- a/workit-landing-page/starter-code/index.html
+++ b/workit-landing-page/starter-code/index.html
@@ -31,6 +31,11 @@
       border-bottom: 2px solid #44FFA1;
     }
 
+    nav p:hover {
+      color: #44FFA1;
+      cursor: pointer;
+    }
+
     nav img {
       margin-left: 2rem;
     }
@@ -49,9 +54,17 @@
     }
 
     button {
-      max-width: 8rem;
+      width: 10rem;
       background-color: #44FFA1;
       height: 3rem;
+      /* padding: 14px 40px; */
+    }
+
+    button:hover {
+      background-color: #24053E;
+      border: 2px solid #44FFA1;
+      color: #44FFA1;
+      cursor: pointer;
     }
 
     section {
