First fronten mentors JS challenge

--- a/workit-landing-page/starter-code/index.html
+++ b/workit-landing-page/starter-code/index.html
@@ -133,6 +133,7 @@
       left: 50%;
       transform: translate(-50%)
     }
+    
   
   </style>
 </head>
@@ -206,6 +207,9 @@
     </div>
   </div>
   <img class="hero-image" src="./assets/images/image-hero.webp" />
+  <!-- <img class="pattern1" src="./assets/images/bg-pattern-1.svg" />
+  <img class="pattern2" src="./assets/images/bg-pattern-2.svg" />
+  <img class="pattern3" src="./assets/images/bg-pattern-3.svg" /> -->
 
 </body>
 </html>
